fix: Fix tooltip on mobile devices

--- a/src/style.css
+++ b/src/style.css
@@ -91,75 +91,77 @@ hr {
   --tooltip-background-color: #1d2452e5;
   --tooltip-arrow-top-position: calc(100% + 0.375rem);
 
-  position: relative;
+  @media (hover) {
+    position: relative;
 
-  &::after,
-  &::before {
-    position: absolute;
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.2s ease;
-    z-index: 10;
-  }
-
-  &::after {
-    content: attr(data-tooltip);
-    background: var(--tooltip-background-color);
-    color: white;
-    padding: 0.25rem 0.375rem;
-    border-radius: 0.25rem;
-    font-size: 0.6875rem;
-    width: 15rem;
-    max-width: 15rem;
-    line-height: 1;
-    letter-spacing: 0;
-    text-align: left;
-    font-weight: 500;
-  }
-
-  &::before {
-    content: "";
-    border: 6px solid transparent;
-  }
-
-  &:hover::after,
-  &:hover::before {
-    opacity: 1;
-  }
-
-  &.tooltip--bottom {
-    &::after {
-      top: var(--tooltip-arrow-top-position);
-      left: 50%;
-      transform: translateX(-50%);
-    }
-  }
-
-  &.tooltip--bottom-left {
-    &::after {
-      top: var(--tooltip-arrow-top-position);
-      left: 0;
-      transform: none;
-    }
-  }
-
-  &.tooltip--bottom-right {
-    &::after {
-      top: var(--tooltip-arrow-top-position);
-      right: 0;
-      left: auto;
-      transform: none;
-    }
-  }
-
-  &.tooltip--bottom,
-  &.tooltip--bottom-left,
-  &.tooltip--bottom-right {
+    &::after,
     &::before {
-      top: calc(100% - 0.375rem);
-      left: 50%;
-      transform: translateX(-50%);
-      border-bottom-color: var(--tooltip-background-color);
+      position: absolute;
+      opacity: 0;
+      pointer-events: none;
+      transition: all 0.2s ease;
+      z-index: 10;
+    }
+
+    &::after {
+      content: attr(data-tooltip);
+      background: var(--tooltip-background-color);
+      color: white;
+      padding: 0.25rem 0.375rem;
+      border-radius: 0.25rem;
+      font-size: 0.6875rem;
+      width: 15rem;
+      max-width: 15rem;
+      line-height: 1;
+      letter-spacing: 0;
+      text-align: left;
+      font-weight: 500;
+    }
+
+    &::before {
+      content: "";
+      border: 6px solid transparent;
+    }
+
+    &:hover::after,
+    &:hover::before {
+      opacity: 1;
+    }
+
+    &.tooltip--bottom {
+      &::after {
+        top: var(--tooltip-arrow-top-position);
+        left: 50%;
+        transform: translateX(-50%);
+      }
+    }
+
+    &.tooltip--bottom-left {
+      &::after {
+        top: var(--tooltip-arrow-top-position);
+        left: 0;
+        transform: none;
+      }
+    }
+
+    &.tooltip--bottom-right {
+      &::after {
+        top: var(--tooltip-arrow-top-position);
+        right: 0;
+        left: auto;
+        transform: none;
+      }
+    }
+
+    &.tooltip--bottom,
+    &.tooltip--bottom-left,
+    &.tooltip--bottom-right {
+      &::before {
+        top: calc(100% - 0.375rem);
+        left: 50%;
+        transform: translateX(-50%);
+        border-bottom-color: var(--tooltip-background-color);
+      }
     }
   }
 }
